--- a/Time_Log_Chart.Rmd
+++ b/Time_Log_Chart.Rmd
@@ -5,6 +5,15 @@ date: "2024-03-07"
 output: pdf_document
 ---
 
+<!-- Academic Honesty Statement -->
+<!-- Name(s) of all authors: Ishita Sarraf -->
+<!-- Assignment name: Individual Project -->
+<!-- Assignment due date: March 11, 2024 -->
+<!-- Written/online sources used: None  -->
+<!-- Help obtained (Acknowledgments): None -->
+<!-- “I/we confirm that the above list of sources is complete AND that I/we have not talked to anyone else about the solution to this problem.” -->
+
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
